tests/testdata/run/queue_microtask_error.ts.out
1
error: Uncaught Error: foo
  throw new Error("foo");
        ^
    at [WILDCARD]/queue_microtask_error.ts:2:9
    at ext:core/[WILDCARD]
